css/stylish-portfolio.css
/*!
 * Start Bootstrap - Stylish Portfolio (http://startbootstrap.com/)
 * Copyright 2013-2017 Start Bootstrap
 * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap/blob/gh-pages/LICENSE)
 */


/* Global Styles */

html,
body {
    width: 100%;
    height: 100%;
}

body {
    font-family: 'Source Sans Pro', 'Helvetica Neue', Helvetica, Arial, sans-serif;
    color: darkslategray;
}

.text-vertical-center {
    position: absolute;
    top: 40%;
    right: 40%;
    text-align: center;
    vertical-align: middle;
}

.text-vertical-center h1 {
    font-size: 4.5em;
    font-weight: 700;
    margin: 0;
    padding: 0;
}


/* Custom Button Styles */

.btn-dark {
    color: #fff;
    border: none;
    border-radius: 0;
    background-color: rgba(0, 0, 0, .4);
}

.btn-dark:hover,
.btn-dark:focus,
.btn-dark:active {
    color: #fff;
    background-color: rgba(0, 0, 0, .7);
}

.btn-light {
    color: #333;
    border: none;
    border-radius: 0;
    background-color: rgb(255, 255, 255);
}

.btn-light:hover,
.btn-light:focus,
.btn-light:active {
    color: #333;
    background-color: rgba(255, 255, 255, .8);
}


/* Custom Horizontal Rule */

hr.small {
    max-width: 100px;
}


/* Side Menu */

#sidebar-wrapper {
    position: fixed;
    z-index: 1000;
    right: 0;
    overflow-y: auto;
    width: 250px;
    height: 100%;
    -webkit-transition: all .4s ease 0s;
    -moz-transition: all .4s ease 0s;
    -ms-transition: all .4s ease 0s;
    -o-transition: all .4s ease 0s;
    transition: all .4s ease 0s;
    transform: translateX(250px);
    background: #222;
}

.sidebar-nav {
    position: absolute;
    top: 0;
    width: 250px;
    margin: 0;
    padding: 0;
    list-style: none;
}

.sidebar-nav li {
    line-height: 40px;
    text-indent: 20px;
}

.sidebar-nav li a {
    display: block;
    text-decoration: none;
    color: #999;
}

.sidebar-nav li a:hover {
    text-decoration: none;
    color: #fff;
    background: rgba(255, 255, 255, .2);
}

.sidebar-nav li a:active,
.sidebar-nav li a:focus {
    text-decoration: none;
}

.sidebar-nav > .sidebar-brand {
    font-size: 18px;
    line-height: 55px;
    height: 55px;
}

.sidebar-nav > .sidebar-brand a {
    color: #999;
}

.sidebar-nav > .sidebar-brand a:hover {
    color: #fff;
    background: none;
}

#menu-toggle {
    position: fixed;
    z-index: 1;
    top: 0;
    right: 0;
}

#sidebar-wrapper.active {
    right: 250px;
    width: 250px;
    -webkit-transition: all .4s ease 0s;
    -moz-transition: all .4s ease 0s;
    -ms-transition: all .4s ease 0s;
    -o-transition: all .4s ease 0s;
    transition: all .4s ease 0s;
}

.toggle {
    font-size: 1em;
    margin: 5px 5px 0 0;
    padding: 15px 20px;
}


/* Header */

.header/*, .header img*/{
    position: relative;
    background-image: url("img/IMG_3241.jpg");
    width: 100%;
    height: 100%;
    text-align: center;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
}

.header img{
    width: 100%;
    height: 100%;
    z-index: -1;
}

#title{
    color: white;
}

#name{
    color: cadetblue;
}

/* About */

.about {
    padding: 50px 0;
}


/* Services */

.services {
    padding: 50px 0;
}

.service-item {
    margin-bottom: 30px;
}


/* Callout */

.callout {
    display: table;
    width: 100%;
    height: 400px;
    color: #fff;
    background: url(../img/callout.jpg) no-repeat center center scroll;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
}


/* Portfolio */

.portfolio {
    padding: 50px 0;
}

#portfolio {
    background-color: paleturquoise;
}

.portfolio-item {
    margin-bottom: 30px;
}

.img-portfolio {
    margin: 0 auto;
    height: 300px;
}

.img-portfolio:hover {
    opacity: .8;
}


/* Call to Action */

.call-to-action {
    padding: 50px 0;
}

.call-to-action .btn {
    margin: 10px;
}


/* Map */

.map {
    height: 500px;
}

@media(max-width:768px) {
    .map {
        height: 75%;
    }
}

.map iframe {
    pointer-events: none;
}


/* Footer */

footer {
    padding-top: 40px;
    background-color: lightgrey;
}

#to-top {
    font-size: 1em;
    position: fixed;
    right: 5px;
    bottom: 5px;
    display: none;
    padding: 15px 20px;
}

.leah {
    border-radius: 15%;
}

#contacts{
    display: block;
}

#width{
    width: 1000px;
}

.contain-one {
    display: flex;
}

.bio {
    margin: auto;
    padding: 0px 97px;
}

p {
    margin-bottom: 0px;
}

.grid {
    position: relative;
    clear: both;
    margin: 0 auto;
    
    max-width: 1000px;
    list-style: none;
    text-align: center;
}

.grid figure{
    position: relative;
    float: left;
    overflow: hidden;
    margin: 10px 1%;
    min-width: 320px;
    max-width: 480px;
    max-height: 360px;
    width: 48%;
    height: auto;
    text-align: center;
    /*cursor: pointer;*/
}

.grid figure img {
    position: relative;
    display: block;
    min-height: 100%;
    max-width: 100%;
    opacity: 0.8;
}

.grid figure figcaption{
    padding: 2em;
    color: #fff;
    text-transform: uppercase;
    font-size: 1.25em;
    -webkit-backface-visibility: hidden;
    backface-visibility: hidden;
}

.grid figure h2 {
    word-spacing: -0.15em;
    font-weight: 300;
}


figcaption {
    padding: 2em;
    color: #fff;
    text-transform: uppercase;
    font-size: 1.25em;
    -webkit-backface-visibility: hidden;
    backface-visibility: hidden;
}

figure figcaption::before,
figure p {
    -webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
    transition: opacity 0.35s, transform 0.35s;
}

figure figcaption::before {
    position: absolute;
    bottom: -100px;
    width: 250px;
    height: 250px;
    border: 2px solid #fff;
    border-radius: 50%;
    box-shadow: 0 0 0 900px rgba(255,255,255,0.2);
    content: '';
    opacity: 0;
    -webkit-transform: scale3d(0.5,0.5,1);
    transform: scale3d(0.5,0.5,1);
    -webkit-transform-origin: 50% 50%;
    transform-origin: 50% 50%;
}

figure p {
    position: absolute;
    right: 0;
    bottom: 0;
    padding: 0 1.5em 1.5em 0;
    width: 140px;
    text-align: right;
    opacity: 0;
    -webkit-transform: translate3d(20px,20px,0);
    transform: translate3d(20px,20px,0);
}

figure:hover figcaption::before {
    opacity: 1;
    -webkit-transform: scale3d(1,1,1);
    transform: scale3d(1,1,1);
}

figure:hover p {
    opacity: 1;
    -webkit-transform: translate3d(0,0,0);
    transform: translate3d(0,0,0);
}

.col-md-3 {
    padding-bottom: 15px;
    padding-top: 15px;
}

